testing/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "apache-ingress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "apache.dlwhitehurst.com"
    secretName: "apache-tls-prod"
  rules:
  - host: "apache.dlwhitehurst.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "apache2"
            port:
              number: 80
